# pofinance

./: README.md  setup.cfg
demo/: batch_t.py  single_t.py  test.py
dev/: t.py
pofinance/: __init__.py
pofinance/api/: shares.py
pofinance/core/: PDFType.py
script/: allpackages.txt
