[metadata]
name = pofinance
version = 0.0.1
description = pip install pofinance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/pofinance/issues
    Documentation = https://github.com/CoderWanFeng/pofinance/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/pofinance

[options]
packages = find:
install_requires =
python_requires = >=3.5
include_package_data = True
zip_safe = False

